Page MenuHome GnuPG

Kleopatra: No feedback by screen readers if no certificates are found on server lookup
Testing, NormalPublic

Description

If no certificates are found on server lookup then we show "No certificates found", but NVDA doesn't announce this result.

How to reproduce:

  • Open Lookup on Server
  • Enter an email address that won't give any results
  • Press Enter or click the Search button

Observed:

  • The empty result table has keyboard focus
  • The result table is overlaid with a text overlay stating "No certificates found" - OK
  • NVDA reads "Results tree view" - Not OK

Expected:

  • The result table is overlaid with a text overlay stating "No certificates found"
  • NVDA reads "No certificates found"

Details

Version
Gpg4win 5.0.0-beta-43d157fdffac1c9379ec84ac7f96a443c170dfc2 (2025-10-16)

Event Timeline

ikloecker created this task.
ikloecker mentioned this in Unknown Object (Maniphest Task).Oct 20 2025, 9:38 AM
ikloecker changed the task status from Open to Testing.Oct 20 2025, 2:17 PM
ikloecker added a project: vsd34.
ikloecker moved this task from Backlog to WIP on the vsd34 board.

Fixed and backported for VSD 3.4

timegrid added a subscriber: timegrid.

Looks good to me on gpg4win-5.0.0-beta395 @ win11

no@search.results
kleopatra  dialog  Searching for matching certificates ...
Cancel  button  Enter
No certificates found
ikloecker mentioned this in Unknown Object (Maniphest Task).Oct 27 2025, 9:29 AM