Move focus from base widget to text overlay when overlay is shown

Apart from taking away the focus from the overlaid widget this makes
screen readers read the text of the overlay.

GnuPG-bug-id: 7862