src/view/overlaywidget.cpp
@@ -12,6 +12,7 @@
 
 #include "kleopatra_debug.h"
 
+#include <QApplication>
 #include <QEvent>
 #include <QLabel>
 #include <QVBoxLayout>
@@ -57,6 +58,12 @@ void OverlayWidget::showOverlay()
     }
     shown = true;
     reposition();
+    // grab focus if the base widget (or one of its children) has focus
+    mOldFocusWidget.clear();
+    if ((focusPolicy() != Qt::NoFocus) && (mBaseWidget->hasFocus() || mBaseWidget->isAncestorOf(QApplication::focusWidget()))) {
+        mOldFocusWidget = QApplication::focusWidget();
+        setFocus();
+    }
     mBaseWidget->installEventFilter(this);
 }
 
@@ -67,6 +74,10 @@ void OverlayWidget::hideOverlay()
     }
     shown = false;
     mBaseWidget->removeEventFilter(this);
+    // return focus to the previous focus widget if the overlay had focus
+    if (hasFocus() && mOldFocusWidget) {
+        mOldFocusWidget->setFocus();
+    }
     hide();
 }
 
