src/view/textoverlay.cpp
@@ -34,6 +34,8 @@ TextOverlay::TextOverlay(QWidget *baseWidget, QWidget *parent)
     vbox->addStretch(1);
 
     setOverlay(widget);
+    setFocusProxy(label);
+    setFocusPolicy(label->focusPolicy());
 }
 
 TextOverlay::~TextOverlay() = default;
